<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:id="@+id/linearLayoutCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:background="@drawable/yellow_border"
            >
            <ImageView
                android:id="@+id/AboutAvatar"
                android:src="@drawable/mar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"

                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:textSize="26sp" />

                <TextView
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTotalConfirmed"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:text="@string/Copyright" />


                <TextView
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:text="@string/GithubProfile" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>