<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    tools:context=".ui.country.CountryDetails">


    <LinearLayout
        android:layout_margin="16dp"
        android:id="@+id/linearLayoutCountryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgDetailCountryFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/mar" />
        <TextView
            android:textAlignment="center"
            android:id="@+id/tvDetailCountryName"
            style="@style/TotalFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            tools:text="Chidddddddddna" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutCountryName"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"

            android:background="@drawable/yellow_border"
            >
            <ImageView
                android:src="@drawable/efected"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalConfirmed"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDetailTotalCases"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalConfirmed"
                    android:textSize="26sp"
                    tools:text="80282" />
                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalActive"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDetailTotalActive"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalConfirmed"
                    android:textSize="26sp"
                    tools:text="3245" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TodayCases"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDetailTodayCases"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalConfirmed"
                    android:textSize="26sp"
                    tools:text="45" />

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalCritical"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDetailTotalCritical"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalConfirmed"
                    android:textSize="26sp"
                    tools:text="3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDeaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutCases"
            android:layout_marginTop="5dp"
            android:background="@drawable/red_border"
            android:layout_centerInParent="true">
            <ImageView
                android:src="@drawable/funeral"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalDeaths"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDetailTotalDeaths"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalDeaths"
                    android:textSize="26sp"
                    tools:text="3245" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">


                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TodayDeaths"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDetailTodayDeaths"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalDeaths"
                    android:textSize="26sp"
                    tools:text="4" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutRecovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutDeaths"
            android:layout_centerInParent="true"
            android:background="@drawable/green_border"
            android:layout_marginTop="5dp">
            <ImageView
                android:src="@drawable/recovered"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalRecovered"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDetailTotalRecovered"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalRecovered"
                    android:textSize="26sp"
                    tools:text="80282" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutTests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutRecovered"
            android:layout_centerInParent="true"
            android:background="@drawable/blue_border"
            android:layout_marginTop="5dp">
            <ImageView
                android:src="@drawable/tube"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"

                android:layout_gravity="center_vertical">

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalTests"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDetailTotalTests"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalTests"
                    android:textSize="26sp"
                    tools:text="80282" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>






</RelativeLayout>