<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.home.HomeFragment">

<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:gravity="center"-->
<!--        android:orientation="vertical">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="24dp"-->
<!--            android:fontFamily=""-->
<!--            android:text="Coronavirus COVID-19\nGlobal Cases"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="#000"-->
<!--            android:textSize="24dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvLabelTotalConfirmed"-->
<!--            style="@style/LabelFontStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Total Confirmed"-->
<!--            android:textColor="#000" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvTotalConfirmed"-->
<!--            style="@style/TotalFontStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/colorTotalConfirmed"-->
<!--            tools:text="162387" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvLabelTotalDeaths"-->
<!--            style="@style/LabelFontStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Total Deaths"-->
<!--            android:textColor="@color/colorTotalDeaths" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvTotalDeaths"-->
<!--            style="@style/TotalFontStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/colorTotalDeaths"-->
<!--            tools:text="75648" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvLabelTotalRecovered"-->
<!--            style="@style/LabelFontStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Total Recovered"-->
<!--            android:textColor="@color/colorTotalRecovered" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvTotalRecovered"-->
<!--            style="@style/TotalFontStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/colorTotalRecovered"-->
<!--            tools:text="75938" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvLastUpdated"-->
<!--            style="@style/LabelFontStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="#000"-->
<!--            tools:text="Last Updated\n Mon, 23 Mar 2020 1:20:30 PM" />-->

<!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/linearLayoutCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:background="@drawable/yellow_border"
            >
            <ImageView
                android:src="@drawable/efected"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalConfirmed"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTotalConfirmed"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalConfirmed"
                    android:textSize="26sp"
                    tools:text="80282" />
                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalActive"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTotalActive"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalConfirmed"
                    android:textSize="26sp"
                    tools:text="3245" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TodayCases"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTodayCases"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalConfirmed"
                    android:textSize="26sp"
                    tools:text="45" />

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalCritical"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTotalCritical"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalConfirmed"
                    android:textSize="26sp"
                    tools:text="3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDeaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutCases"
            android:background="@drawable/red_border"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true">
            <ImageView
                android:src="@drawable/funeral"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalDeaths"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTotalDeaths"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalDeaths"
                    android:textSize="26sp"
                    tools:text="3245" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">


                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TodayDeaths"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTodayDeaths"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalDeaths"
                    android:textSize="26sp"
                    tools:text="4" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutRecovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutDeaths"
            android:layout_centerInParent="true"
            android:background="@drawable/green_border"
            android:layout_marginTop="5dp">
            <ImageView
                android:src="@drawable/recovered"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"

                android:layout_gravity="center_vertical">

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalRecovered"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTotalRecovered"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalRecovered"
                    android:textSize="26sp"
                    tools:text="80282" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutTests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutRecovered"
            android:layout_centerInParent="true"
            android:background="@drawable/blue_border"
            android:layout_marginTop="5dp">
            <ImageView
                android:src="@drawable/tube"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"

                android:layout_gravity="center_vertical">

                <TextView
                    style="@style/LabelFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalTests"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTotalTests"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/colorTotalTests"
                    android:textSize="26sp"
                    tools:text="80282" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutTests"
            android:layout_centerInParent="true"
            android:layout_margin="5dp">
            <TextView
                        android:id="@+id/tvLastUpdated"
                        style="@style/LabelFontStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"

                android:layout_gravity="center"
                        android:textColor="#000"
                        tools:text="Last Updated\n Mon, 23 Mar 2020 1:20:30 PM" />
        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_circular_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress" />
</RelativeLayout>